--- a/music-client/package.json
+++ b/music-client/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^1.0.0",
