--- a/music-server/src/main/resources/application.properties
+++ b/music-server/src/main/resources/application.properties
@@ -14,6 +14,7 @@ logging.level.org.springframework.boot.autoconfigure=ERROR
 # redis相应的地址  还有一些配置
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+spring.redis.password=123456
 spring.redis.database=0
 spring.redis.timeout=1800000
 spring.redis.lettuce.pool.max-active=20
